2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>

	* bindings/python/totem.defs: Fix the Python bindings for
	totem.action_volume_relative so that a float is expected, rather than
	an int.
	* src/totem.c: Fix the documentation for the same function.

2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Patch from Matthew Adams
	<roguestar191@comcast.net> to use read() instead of readline() when
	searching for the t-param in YouTube searches, in order to reduce the
	number of regexp searches.

2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Fix YouTube plugin behaviour when
	attempting to perform multiple searches simultaneously, and fix some
	threading problems where GTK+ functions were being called from a
	spawned thread. (Closes: #557470)

2008-10-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Remove redundant HTTP request
	when loading search results.

2008-10-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.py: Update the YouTube URL resolution
	code to work with Google's latest updates to YouTube.
	(Closes: #557681)

2008-10-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (seek_slider_pressed_cb), (seek_slider_released_cb):
	Add hack from Rhythmbox to force the behaviour of the left-click
	button to skip directly to the position we clicked, as if we were
	using the middle-button click (Closes: #129671)

2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem-sidebar.c (totem_sidebar_is_focused):
	* src/totem-sidebar.h:
	* src/totem.c (window_key_press_event_cb): Remove accelerators for the
	window resize menu items, they were causing problems with the latest
	GTK+ whenever the sidebar was used (Closes: #557447)

2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_video_property):