@@ -24,7 +24,7 @@
          </child>
          <child>
             <object class="GtkAction" id="select-subtitle">
-               <property name="label" translatable="yes">_Select text subtitle...</property>
+               <property name="label" translatable="yes">_Select Text Subtitles...</property>
                <property name="tooltip" translatable="yes">Select a file to use for text subtitles</property>
                <property name="stock-id">gtk-open</property>
                <signal name="activate" handler="playlist_select_subtitle_action_callback"/>
