@@ -742,7 +742,10 @@ subtitles, and more.</para>
 	  <tip><para>&app; will automatically load and display subtitles if the file which contains them has the same
 	  name as the video file played and the extension <filename>asc</filename>, <filename>txt</filename>,
 	  <filename>sub</filename>, <filename>smi</filename>, or <filename>ssa</filename>.
-	  </para></tip>
+	  </para>
+	  <para>If the file containing the subtitles has a different name to the video being played, you can
+	  right-click on the video in the playlist and choose <menuchoice><guimenuitem>Select Text Subtitles...</guimenuitem></menuchoice>
+	  from the popup menu to load the correct subtitle file.</para></tip>
 	</sect2>
 
     <sect2 id="totem-usage-take-screenshot">
