@@ -1,3 +1,8 @@
+2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* C/totem.xml: Mention about loading a custom subtitles file if one
+	isn't found automatically. (Closes: #554929)
+
 2008-08-09  Luca Ferretti  <elle.uca@libero.it>
 
 	* it/*:
