@@ -1,5 +1,13 @@
 2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* data/playlist.ui:
+	* src/totem-uri.c (totem_add_subtitle): Rename the
+	"Select text subtitle..." entry in the playlist popup menu to
+	"Select Text Subtitles..." for consistency with the Subtitles menu and
+	the HIG. (Closes: #554929)
+
+2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* bindings/python/totem.defs: Fix the Python bindings for
 	totem.action_volume_relative so that a float is expected, rather than
 	an int.
